# Rust-Mulithreaded-Sorting

./: Cargo.toml  README.md
src/: main.rs  multi_threading.rs  sorting.rs  svg.rs
templates/: background_info.html  index.html  multi_threaded_sort_demo.html
