[package]
name = "multithread-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
num_cpus = "1.16.0"
crossbeam = "0.8.1"
rand = "0.8.5"
actix-web = "4.4.0"
actix-files = "0.6.2"
charts = "0.3.0"